k8s/photoprism/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: photoprism
  labels:
    name: photoprism
