k8s/photoprism/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr
          imagePullPolicy: Always
          ports:
            - containerPort: 7878
          volumeMounts:
            - mountPath: /config
              name: radarr
            - mountPath: /data
              name: radarr-data
      volumes:
        - name: radarr
          hostPath:
            path: /opt/radarr/config
        - name: radarr-data
          hostPath:
            path: /opt/media/data
