k8s/photoprism/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
      - name: photoprism
        image: photoprism/photoprism:260601
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: "4"
            memory: 4Gi
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /photoprism/originals
          name: photoprism
          subPath: /originals
        - mountPath: /photoprism/import
          name: photoprism
          subPath: /import
        - mountPath: /photoprism/storage
          name: photoprism
          subPath: /storage
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
      volumes:
        - name: photoprism
          persistentVolumeClaim:
            claimName: photoprism-opt-server-claim
