k8s/photoprism/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism-mariadb-service
  namespace: photoprism
  labels:
    app: photoprism-mariadb-service
spec:
  type: ClusterIP
  selector:
    app: photoprism-mariadb
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
