k8s/photoprism/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
  labels:
    app: radarr
    kubernetes.io/name: "radarr"
spec:
  type: NodePort
  ports:
    - name: radarr
      port: 7878
      targetPort: 7878
      nodePort: 30010
  selector:
    app: radarr
